crates/patok-tui/tests/snapshots/overlay__a_dirty_overlay_opens_the_three_choice_close_dialog.snap
---
source: crates/patok-tui/tests/overlay.rs
expression: "draw(&app, W, H)"
---
            ┌ Builder | Claude ────────────────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                                         │
      ↓     │                                                                                      │
[   Plan   ]│                                                                                      │
     ┌────────────────────────────────── Settings -- Patok ──────────────────────────── [ x ] ┐    │
[  Bu│      shell version: 0.0.0                                                             █│    │
     │      provider  ‹ claude ›                                                             █│────┘
[  Re│      model  (not set)                                                                 █│────┐
     │      research provider  ‹ claude ›                                                    █│    │
[   S│      research model  sonnet                                                           █│    │
[ Dis│      planner provider  ‹ claude ›                                                     █│    │
     │      planner model  opus                                                              █│    │
     │      builder provider  ‹ claude ›                                                     █│    │
     │      builder model  opus                                                              █│    │
     │      reviewer provider  ‹ claude ›                                                    ││    │
     │      reviewer┌──────────────────── Unsaved changes ────────────── [ x ] ┐             ││    │
     │      discover│▶ Save -- apply every drafted change and close            │             ││    │
     │      discover│  Discard -- throw away the drafted changes and close     │             ││    │
     │  ▾ Pipeline  │  Cancel -- back to the settings                          │             ││    │
     │      run mode│                                                          │             ││    │
     │▶     [x] plan│                                                          │             ││    │
     │      [ ] skip│                                                          │             ││    │
     │      [ ] skip│ ↑↓ move                [ Enter ] Confirm  [ Esc ] Cancel │             ││    │
     │      [ ] skip└──────────────────────────────────────────────────────────┘             ││    │
     │      review confidence threshold  5                                                   ││    │
     │┌──────────────────────────────────── plan enabled ────────────────────────────────────┐│    │
     ││Whether a plan session runs before each builder session.                              ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     │└──────────────────────────────────────────────────────────────────────────────────────┘│    │
     │                                                                                        │    │
     │ ↑↓ move · Enter/Space edit · ←→ fold/cycle                               [ Esc ] Close │    │
     └────────────────────────────────────────────────────────────────────────────────────────┘    │
            │                                                                                      │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll · Tab output             │
            └──────────────────────────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                      Enter  start build  ?  settings  t  theme  d  detach  q  quit
