crates/patok-tui/tests/snapshots/overlay__a_local_validation_error_keeps_the_editor_open.snap
---
source: crates/patok-tui/tests/overlay.rs
expression: "draw(&app, W, H)"
---
            ┌ Builder | Claude ────────────────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                                         │
      ↓     │                                                                                      │
[   Plan   ]│                                                                                      │
     ┌────────────────────────────────── Settings -- Patok ──────────────────────────── [ x ] ┐    │
[  Bu│      discovery provider  ‹ claude ›                                                   ││    │
     │      discovery model  opus                                                            ││────┘
[  Re│  ▾ Pipeline                                                                           ││────┐
     │      run mode  ‹ sprint ›                                                             ││    │
[ Dis│      [ ] plan enabled                                                                 ││    │
     │      [ ] skip planner for simple                                                      █│    │
     │      [ ] skip research for simple                                                     █│    │
     │      [ ] skip review for simple                                                       █│    │
     │      review confidence threshold  5                                                   █│    │
     │      review multipass threshold  8                                                    █│    │
     │      [ ] batch review                                                                 █│    │
     │      [ ] planner lookahead                                                            █│    │
     │      [ ] review in loop                                                               █│    │
     │      confidence threshold  0.5                                                        █│    │
     │  ▾ Timeouts and pauses                                                                ││    │
     │▶     agent timeout  0                                                                 ││    │
     │      pause between tasks  10                                                          ││    │
     │      pause between agents  3                                                          ││    │
     │      pause between cycles  30                                                         ││    │
     │      engine idle timeout  1800                                                        ││    │
     │┌─────────────────────────────────── agent timeout ────────────────────────────────────┐│    │
     ││How long one agent invocation may idle, in seconds, before it is stopped; the hard    ││    │
     ││timeout is four times this. Default 600.                                              ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     │└──────────────────────────────────────────────────────────────────────────────────────┘│    │
     │agent_timeout_secs must be a whole number of seconds greater than zero                  │    │
     │ ↑↓ move · Enter/Space edit · ←→ fold/cycle                               [ Esc ] Close │    │
     └────────────────────────────────────────────────────────────────────────────────────────┘    │
            │                                                                                      │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll · Tab output             │
            └──────────────────────────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                                        Enter  start build  m  menu
