crates/patok-tui/tests/snapshots/overlay__all_sections_folded_show_only_their_headers.snap
---
source: crates/patok-tui/tests/overlay.rs
expression: screen
---
            ┌ Builder | Claude ────────────────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                                         │
      ↓     │                                                                                      │
[   Plan   ]│                                                                                      │
     ┌────────────────────────────────── Settings -- Patok ──────────────────────────── [ x ] ┐    │
[  Bu│  ▸ Provider and model                                                                  │    │
     │  ▸ Pipeline                                                                            │────┘
[  Re│  ▸ Timeouts and pauses                                                                 │────┐
     │  ▸ Git                                                                                 │    │
[ Dis│▶ ▸ Display and theme                                                                   │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │┌───────────────────────────────── Display and theme ──────────────────────────────────┐│    │
     ││The shell's own display preferences. The shell applies and persists them itself -- no ││    │
     ││engine involved -- and each takes effect immediately.                                 ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     │└──────────────────────────────────────────────────────────────────────────────────────┘│    │
     │                                                                                        │    │
     │ ↑↓ move · Enter/Space edit · ←→ fold/cycle                               [ Esc ] Close │    │
     └────────────────────────────────────────────────────────────────────────────────────────┘    │
            │                                                                                      │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll · Tab output             │
            └──────────────────────────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                                        Enter  start build  m  menu
