crates/patok-tui/tests/snapshots/overlay__question_mark_opens_the_fresh_overlay.snap
---
source: crates/patok-tui/tests/overlay.rs
expression: screen
---
            ┌ Builder | Claude ────────────────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                                         │
      ↓     │                                                                                      │
[   Plan   ]│                                                                                      │
      ↓     │                                                                                      │
[  Build   ]│                                                                                      │
      ↓     └──────────────────────────────────────────────────────────────────────────────────────┘
[  Re┌────────────────────────────────── Settings -- Patok ──────────────────────────── [ x ] ┐────┐
     │▶ ▾ Provider and model                                                                  │    │
[ Dis│      engine version: 0.1.0                                                             │    │
     │      shell version: 0.0.0                                                              │    │
     │      provider  ‹ claude ›                                                              │    │
     │      model  (not set)                                                                  │    │
     │      research provider  ‹ claude ›                                                     │    │
     │      research model  sonnet                                                            │    │
     │      planner provider  ‹ claude ›                                                      │    │
     │      planner model  opus                                                               │    │
     │      builder provider  ‹ claude ›                                                      │    │
     │      builder model  opus                                                               │    │
     │      reviewer provider  ‹ claude ›                                                     │    │
     │      reviewer model  sonnet                                                            │    │
     │      discovery provider  ‹ claude ›                                                    │    │
     │      discovery model  opus                                                             │    │
     │  ▾ Pipeline                                                                            │    │
     │      run mode  ‹ sprint ›                                                              │    │
     │      [ ] plan enabled                                                                  │    │
     │      [ ] skip planner for simple                                                       │    │
     │      [ ] skip research for simple                                                      │    │
     │      [ ] skip review for simple                                                        │    │
     │      review confidence threshold  5                                                    │    │
     │      review multipass threshold  8                                                     │    │
     │      [ ] batch review                                                                  │    │
     │      [ ] planner lookahead                                                             │    │
     │      [ ] review in loop                                                                │    │
     │      confidence threshold  0.5                                                         │    │
     │  ▾ Timeouts and pauses                                                                 │    │
     │      agent timeout  600                                                                │    │
     │      pause between tasks  10                                                           │    │
     │      pause between agents  3                                                           │    │
     │      pause between cycles  30                                                          │    │
     │      engine idle timeout  1800                                                         │    │
     │      [x] adaptive pauses                                                               │    │
     │      discovery cooldown  300                                                           │    │
     │      discovery cooldown cap  1800                                                      │    │
     │  ▾ Git                                                                                 │    │
     │      auto-push remote  (not set)                                                       │    │
     │  ▾ Display and theme                                                                   │    │
     │      theme  ‹ dark ›                                                                   │    │
     │      truecolor  ‹ auto ›                                                               │    │
     │      [x] preview wrap                                                                  │    │
     │      update channel  ‹ stable ›                                                        │    │
     │      rail mode  ‹ normal ›                                                             │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │                                                                                        │    │
     │┌───────────────────────────────── Provider and model ─────────────────────────────────┐│    │
     ││Which CLI provider and model the agent roles run on. A change applies at the next task││    │
     ││or agent start; whatever is already running keeps the value it started with.          ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     │└──────────────────────────────────────────────────────────────────────────────────────┘│    │
     │                                                                                        │    │
     │ ↑↓ move · Enter/Space edit · ←→ fold/cycle                               [ Esc ] Close │    │
     └────────────────────────────────────────────────────────────────────────────────────────┘    │
            │                                                                                      │
            │                                                                                      │
            │                                                                                      │
            │                                                                                      │
            │                                                                                      │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll · Tab output             │
            └──────────────────────────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                                        Enter  start build  m  menu
